--- a/pom.xml
+++ b/pom.xml
@@ -17,19 +17,10 @@
 
   <dependencyManagement>
     <dependencies>
-      <!-- The unit tests use JUnit 4 but the integration tests use
-           JUnit 3, so each module's POM sets the JUnit dependency,
-           version, and settings as appropriate. -->
       <dependency>
         <groupId>com.google.android</groupId>
         <artifactId>android</artifactId>
         <version>2.3.3</version>
-      </dependency>
-      <dependency>
-        <groupId>com.google.android</groupId>
-        <artifactId>android-test</artifactId>
-        <version>2.3.3</version>
-        <scope>test</scope>
       </dependency>
     </dependencies>
   </dependencyManagement>
@@ -93,6 +84,7 @@
       </activation>
       <modules>
         <module>android-sync-app</module>
+        <module>android-sync-unit</module>
         <module>android-sync-instrumentation</module>
       </modules>
     </profile>
