Separate unit-test project - rename android-sync-unit to android-sync-unit-test (parallel to android-sync-test, which really should be android-sync-instrumentation-test or similar); add android-test dependency to android-sync-unit-test; reinstate handling of android.test.AssertionFailedError to WaitHelper.

--- a/android-sync-instrumentation/pom.xml
+++ b/android-sync-instrumentation/pom.xml
@@ -57,7 +57,7 @@
 
     <dependency>
       <groupId>org.mozilla.gecko</groupId>
-      <artifactId>android-sync-unit</artifactId>
+      <artifactId>android-sync-unit-test</artifactId>
       <version>${project.version}</version>
     </dependency>
   </dependencies>
