Separate unit-test project - Update example.{classpath, project}.

--- a/test/example.project
+++ b/test/example.project
@@ -4,6 +4,7 @@
 	<comment></comment>
 	<projects>
 		<project>android-sync</project>
+		<project>android-sync-unit-test</project>
 	</projects>
 	<buildSpec>
 		<buildCommand>
