--- a/AndroidManifest.xml.in
+++ b/AndroidManifest.xml.in
@@ -17,6 +17,7 @@
     <uses-permission android:name="com.android.browser.permission.WRITE_HISTORY_BOOKMARKS"/>
     <uses-permission android:name="@ANDROID_PACKAGE_NAME@.permissions.PASSWORDS_PROVIDER"/>
     <uses-permission android:name="@ANDROID_PACKAGE_NAME@.permissions.BROWSER_PROVIDER"/>
+    <uses-permission android:name="@ANDROID_PACKAGE_NAME@.permissions.FORMHISTORY_PROVIDER"/>
 
     <application android:debuggable="true"
                  android:label="@string/sync_app_name">
