--- a/test/AndroidManifest.xml.in
+++ b/test/AndroidManifest.xml.in
@@ -6,8 +6,9 @@
     android:versionCode="1"
     android:versionName="1.0" >
     <uses-sdk android:minSdkVersion="5" />
-    <uses-permission android:name="@ANDROID_PACKAGE_NAME@.permissions.PASSWORDS_PROVIDER"/>
+    <uses-permission android:name="@ANDROID_PACKAGE_NAME@.permissions.PASSWORD_PROVIDER"/>
     <uses-permission android:name="@ANDROID_PACKAGE_NAME@.permissions.BROWSER_PROVIDER"/>
+    <uses-permission android:name="@ANDROID_PACKAGE_NAME@.permissions.DELETED_PASSWORD_PROVIDER"/>
     <instrumentation
         android:name="android.test.InstrumentationTestRunner"
         android:targetPackage="org.mozilla.gecko" />
