Bug 709329 - part 7: run unit tests in random order; don't fail on `mvn clean test`; remove angry error messages from unit tests.

--- a/android-sync-instrumentation/pom.xml
+++ b/android-sync-instrumentation/pom.xml
@@ -17,6 +17,7 @@
 
   <properties>
     <project.basedir>../test</project.basedir>
+    <failIfNoTests>false</failIfNoTests>
   </properties>
 
   <dependencies>
