--- a/android-sync-app/pom.xml
+++ b/android-sync-app/pom.xml
@@ -141,6 +141,11 @@
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
         <version>2.11</version>
+        <configuration>
+          <runOrder>random</runOrder>
+          <!-- <runOrder>alphabetical</runOrder> -->
+          <!-- <runOrder>reversealphabetical</runOrder> -->
+        </configuration>
       </plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
