--- a/android-sync-app/pom.xml
+++ b/android-sync-app/pom.xml
@@ -238,7 +238,7 @@
               <artifactId>maven-checkstyle-plugin</artifactId>
               <version>2.8</version>
               <configuration>
-                <configLocation>${basedir}/checkstyle.xml</configLocation>
+                <configLocation>${basedir}/../checkstyle.xml</configLocation>
                 <includes>**/org/mozilla/gecko/**</includes>
               </configuration>
             </plugin>
