--- a/AndroidManifest.xml.in
+++ b/AndroidManifest.xml.in
@@ -13,10 +13,9 @@
 #include manifests/SyncAndroidManifest_permissions.xml.in
 
     <uses-permission android:name="android.permission.INTERNET"/>
-    <uses-permission android:name="com.android.browser.permission.READ_HISTORY_BOOKMARKS"/>
-    <uses-permission android:name="com.android.browser.permission.WRITE_HISTORY_BOOKMARKS"/>
-    <uses-permission android:name="@ANDROID_PACKAGE_NAME@.permissions.PASSWORDS_PROVIDER"/>
     <uses-permission android:name="@ANDROID_PACKAGE_NAME@.permissions.BROWSER_PROVIDER"/>
+    <uses-permission android:name="@ANDROID_PACKAGE_NAME@.permissions.FORMHISTORY_PROVIDER"/>
+    <uses-permission android:name="@ANDROID_PACKAGE_NAME@.permissions.PASSWORD_PROVIDER"/>
 
     <application android:debuggable="true"
                  android:label="@string/sync_app_name">
