Bug 732147 Part 1 - Add localizable strings.

--- a/sync_strings.dtd.in
+++ b/sync_strings.dtd.in
@@ -70,3 +70,6 @@
 
 <!-- Notification strings -->
 <!ENTITY sync.notification.oneaccount.label 'Only one &syncBrand.fullName.label; account is supported.'>
+
+<!-- Push tab to device strings -->
+<!ENTITY sync.pushtab.title 'Receive a Firefox Tab'>
