--- a/strings.xml.in
+++ b/strings.xml.in
@@ -61,3 +61,5 @@
   <!-- Notification strings -->
   <string name="sync_notification_oneaccount">&sync.notification.oneaccount.label;</string>
 
+  <!-- Push tab to device strings -->
+	<string name="pushtab_notification_title">&sync.pushtab.title;</string>
