--- a/strings.xml.template
+++ b/strings.xml.template
@@ -2,6 +2,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!DOCTYPE resources [
 #include sync_strings.dtd.in
+#include android_strings.dtd
 ]>
 <resources>
 #include strings.xml.in
