--- a/strings/strings.xml.template
+++ b/strings/strings.xml.template
@@ -1,7 +1,11 @@
 #filter substitution
 <?xml version="1.0" encoding="utf-8"?>
 <!DOCTYPE resources [
+<!-- Sync strings. -->
 #include sync_strings.dtd.in
+
+<!-- Fennec strings. -->
+#include android_strings.dtd
 ]>
 <resources>
 #include strings.xml.in
