--- a/strings/strings.xml.in
+++ b/strings/strings.xml.in
@@ -73,6 +73,6 @@
   <string name="sync_new_tab">&new_tab;</string>
 
   <!-- Incorrect settings and changing credentials. -->
-  <string name="sync.invalidserver.label">&sync.invalidserver.label;</string>
+  <string name="sync_invalidserver_label">&sync.invalidserver.label;</string>
   <string name="sync_verifying_label">&sync.verifying.label;</string>
   <string name="sync_new_recoverykey_status_incorrect">&sync.new.recoverykey.status.incorrect;</string>
