--- a/strings/strings.xml.in
+++ b/strings/strings.xml.in
@@ -65,6 +65,7 @@
   <string name="sync_new_tab">&new_tab;</string>
 
   <!-- Incorrect settings and changing credentials. -->
+  <string name="sync_invalidcreds_label">&sync.invalidcreds.label;</string>
   <string name="sync_invalidemail_label">&sync.invalidemail.label;</string>
   <string name="sync_invalidserver_label">&sync.invalidserver.label;</string>
   <string name="sync_usernamenotavailable_label">&sync.usernamenotavailable.label;</string>
