--- a/strings/sync_strings.dtd.in
+++ b/strings/sync_strings.dtd.in
@@ -73,6 +73,7 @@
 <!ENTITY sync.notification.oneaccount.label 'Only one &syncBrand.fullName.label; account is supported.'>
 
 <!-- Incorrect settings and changing credentials. -->
+<!ENTITY sync.invalidcreds.label 'Incorrect account name or password.'>
 <!ENTITY sync.invalidemail.label 'Invalid email address'>
 <!ENTITY sync.invalidserver.label 'Please enter a valid server URL'>
 <!ENTITY sync.usernamenotavailable.label 'Already in use'>
