--- a/strings/sync_strings.dtd.in
+++ b/strings/sync_strings.dtd.in
@@ -101,3 +101,12 @@
 <!ENTITY sync.new.recoverykey.introtext        'Your Recovery Key was changed using another device. Please enter your updated Recovery Key.'>
 <!ENTITY sync.new.recoverykey.acceptbutton     'Update Recovery Key'>
 <!ENTITY sync.new.recoverykey.status.incorrect 'Recovery Key incorrect. Please try again.'>
+
+<!-- Push tab to device strings -->
+<!ENTITY sync.title.send.tab.label 'Send Tab To Devices'>
+<!ENTITY sync.button.send.label 'Send'>
+<!ENTITY sync.button.setup.label 'Setup Sync'>
+<!ENTITY sync.button.continue.browsing.label 'Continue Browsing'>
+<!ENTITY sync.title.redirect.to.setup.label 'Setup Sync to Send Tabs'>
+<!ENTITY sync.text.redirect.to.setup.label 'Setup Firefox Sync on your device to send tabs to other devices.'>
+<!ENTITY sync.text.tab.sent.label 'Your tab was sent!'>
