--- a/strings/strings.xml.in
+++ b/strings/strings.xml.in
@@ -61,9 +61,6 @@
   <!-- Notification strings -->
   <string name="sync_notification_oneaccount">&sync.notification.oneaccount.label;</string>
 
-  <!-- Push tab to device strings -->
-  <string name="sync_new_tab">&new_tab;</string>
-
   <!-- Incorrect settings and changing credentials. -->
   <string name="sync.invalidemail.label">&sync.invalidemail.label;</string>
   <string name="sync.invalidserver.label">&sync.invalidserver.label;</string>
@@ -94,3 +91,8 @@
   <string name="sync.new.recoverykey.introtext">&sync.new.recoverykey.introtext;</string>
   <string name="sync.new.recoverykey.acceptbutton">&sync.new.recoverykey.acceptbutton;</string>
   <string name="sync.new.recoverykey.status.incorrect">&sync.new.recoverykey.status.incorrect;</string>
+
+  <!-- Push tab to device strings -->
+  <string name="sync_new_tab">&new_tab;</string>
+  <string name="sync_title_send_tab">&sync.title.send.tab.label;</string>
+  <string name="sync_button_send">&sync.button.send.label;</string>
