--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@ src/main/java/org/mozilla/gecko/db/BrowserContract.java
 res/xml/sync_syncadapter.xml
 res/xml/sync_options.xml
 res/values/strings.xml
+.DS_Store
 .metadata
 *.pyc
 *~
