--- a/src/main/java/org/mozilla/gecko/db/BrowserContract.java.in
+++ b/src/main/java/org/mozilla/gecko/db/BrowserContract.java.in
@@ -166,6 +166,7 @@ public class BrowserContract {
 
         public static final Uri CONTENT_URI = Uri.withAppendedPath(AUTHORITY_URI, "control");
 
+        // These return 1 if done/finished, 0 if not.
         // Check if history was completely migrated, do a bunch if it wasn't.
         public static final String ENSURE_HISTORY_MIGRATED = "ensure_history_migrated";
         // Check if bookmarks were completely migrated, migrate them if not.
@@ -191,6 +192,9 @@ public class BrowserContract {
         public static final String TIME_PASSWORD_CHANGED = "timePasswordChanged";
         public static final String TIMES_USED = "timesUsed";
         public static final String GUID = "guid";
+
+        // This needs to be kept in sync with the types defined in toolkit/components/passwordmgr/nsILoginManagerCrypto.idl#45
+        public static final int ENCTYPE_SDR = 1;
     }
 
     public static final class DeletedPasswords implements DeletedColumns {
