--- a/src/main/java/org/mozilla/gecko/sync/GlobalConstants.java.in
+++ b/src/main/java/org/mozilla/gecko/sync/GlobalConstants.java.in
@@ -14,4 +14,5 @@ public class GlobalConstants {
 
   public static final String USER_AGENT = "Firefox AndroidSync " + SYNC_VERSION_STRING +
                                           " (" + PRODUCT_NAME + ")";
+  public static final String PRODUCT_PACKAGE = "@ANDROID_PACKAGE_NAME@";
 }
