--- a/AndroidManifest.xml.in
+++ b/AndroidManifest.xml.in
@@ -8,7 +8,8 @@
 
     <uses-library android:name="android.test.runner" />
 
-    <uses-sdk android:minSdkVersion="5" />
+    <uses-sdk android:minSdkVersion="5"
+              android:targetSdkVersion="14" />
 
 #include manifests/SyncAndroidManifest_permissions.xml.in
 
