--- a/test/AndroidManifest.xml.in
+++ b/test/AndroidManifest.xml.in
@@ -5,7 +5,8 @@
     sharedUserId="notSharedUserId"
     android:versionCode="1"
     android:versionName="1.0" >
-    <uses-sdk android:minSdkVersion="5" />
+    <uses-sdk android:minSdkVersion="8"
+              android:targetSdkVersion="14" />
     <uses-permission android:name="@ANDROID_PACKAGE_NAME@.permissions.BROWSER_PROVIDER"/>
     <uses-permission android:name="@ANDROID_PACKAGE_NAME@.permissions.FORMHISTORY_PROVIDER"/>
     <uses-permission android:name="@ANDROID_PACKAGE_NAME@.permissions.PASSWORD_PROVIDER"/>
