Bug 753878 - first cut at UI for selecting engines.

--- a/manifests/SyncAndroidManifest_activities.xml.in
+++ b/manifests/SyncAndroidManifest_activities.xml.in
@@ -16,10 +16,17 @@
             android:windowSoftInputMode="adjustPan|stateHidden"/>
         <activity
             android:noHistory="true"
+            android:excludeFromRecents="true"
             android:name="org.mozilla.gecko.sync.setup.activities.SetupFailureActivity" />
         <activity
             android:noHistory="true"
+            android:excludeFromRecents="true"
             android:name="org.mozilla.gecko.sync.setup.activities.SetupSuccessActivity" />
+        <activity
+            android:noHistory="false"
+            android:excludeFromRecents="true"
+            android:theme="@android:style/Theme.Translucent.NoTitleBar"
+            android:name="org.mozilla.gecko.sync.config.activities.ConfigureEnginesActivity" />
         <receiver
             android:name="org.mozilla.gecko.sync.receivers.UpgradeReceiver">
             <intent-filter>
