Bug 772645: Preprocess res/xml/sync_authenticator.xml; make account type and user ID depend on Fennec version; move Constants.ACCOUNTTYPE_SYNC to GlobalConstants.java.in so that it is preprocessed.
Specifically:

android:sharedUserID=@MOZ_ANDROID_SHARED_ID@

and

android:accountType=@MOZ_ANDROID_SHARED_ACCOUNT_TYPE@.

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@ AndroidManifest.xml
 R.java
 src/main/java/org/mozilla/gecko/sync/GlobalConstants.java
 src/main/java/org/mozilla/gecko/db/BrowserContract.java
+res/xml/sync_authenticator.xml
 res/xml/sync_syncadapter.xml
 res/xml/sync_options.xml
 res/values/strings.xml
