--- a/strings/sync_strings.dtd.in
+++ b/strings/sync_strings.dtd.in
@@ -4,7 +4,7 @@
 
 <!-- Don't localize these. They're here until they have
      a better place to live. -->
-<!ENTITY syncBrand.fullName.label "Firefox Sync">
+<!ENTITY syncBrand.fullName.label "&brandShortName; Sync">
 <!ENTITY syncBrand.shortName.label "Sync">
 
 <!-- Main titles. -->
